[tool.poetry]
name = "unittest-proj"
version = "0.1.0"
description = ""
authors = ["OlyaEf <efimovskikh@gmail.com>"]
readme = "README.md"
packages = [{include = "unittest_proj"}]

[tool.poetry.dependencies]
python = "^3.10"
coverage = "7.0.5"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
